A feature of the Pokemon list has been added

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,7 +12,6 @@ composeBom = "2024.05.00"
 animation = "1.7.0-alpha08"
 navigation = "2.7.7"
 paging = "3.2.1"
-pagingCompose = "3.3.0-rc01"
 retrofit = "2.11.0"
 dagger = "2.49"
 coil = "2.6.0"
@@ -35,7 +34,7 @@ androidx-material3 = { group = "androidx.compose.material3", name = "material3" 
 androidx-animation = { group = "androidx.compose.animation", name = "animation", version.ref = "animation" }
 androidx-navigation = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigation" }
 androidx-paging = { group = "androidx.paging", name = "paging-runtime", version.ref = "paging" }
-androidx-paging-compose = { group = "androidx.paging", name = "paging-compose", version.ref = "pagingCompose" }
+androidx-paging-compose = { group = "androidx.paging", name = "paging-compose", version.ref = "paging" }
 retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
 retrofit-converter-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit" }
 dagger = { group = "com.google.dagger", name = "dagger", version.ref = "dagger" }
