Basic configuration of modules, DI and navigation has been done

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -46,3 +46,4 @@ androidApplication = { id = "com.android.application", version.ref = "agp" }
 jetbrainsKotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 androidLibrary = { id = "com.android.library", version.ref = "agp" }
+kotlinParcelize = { id = "kotlin-parcelize" }
